# temple_and_webster_case_study

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: jy-02-elasticity-model.ipynb  jy-03-demand-forecasting-orchestrate.ipynb  jy-05-back-test.ipynb
src/eda/: eda.py  price_demand_analysis.py
src/models/: backtest.py  demand_forecasting.py  elasticity_model.py  evaluate.py  metrics_store.py  price_optimisation.py
src/utils/: constants.py  utils.py
