[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "temple_and_webster_case_study"
version = "0.0.1"
description = "Price Optimisation Case Study Temple and Webster"
authors = [
  { name = "Jimmy Yue" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["temple_and_webster_case_study"]
force_sort_within_sections = true


